Add configuration for 'image-rendering: pixelated'
